[gd_scene load_steps=5 format=2]

[ext_resource path="res://Rooms/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Rooms/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rooms/Room.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[node name="Room" type="Node2D"]
script = ExtResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 65538, 7, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 8, 0, 131074, 6, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131080, 28, 0, 131081, 27, 0, 131082, 28, 0, 131083, 28, 0, 131084, 27, 0, 131085, 27, 0, 131086, 29, 0, 131087, 28, 0, 131088, 28, 0, 131089, 28, 0, 131090, 28, 0, 131091, 28, 0, 131092, 28, 0, 131093, 28, 0, 131094, 27, 0, 131095, 28, 0, 131096, 28, 0, 131097, 28, 0, 131098, 1610612742, 0, 196610, 1610612741, 0, 196612, 39, 0, 196613, 39, 0, 196614, 39, 0, 196615, 39, 0, 196616, 39, 0, 196617, 32, 0, 196618, 39, 0, 196619, 39, 0, 196620, 17, 0, 196621, 17, 0, 196622, 17, 0, 196623, 17, 0, 196624, 17, 0, 196625, 17, 0, 196626, 17, 0, 196627, 17, 0, 196628, 17, 0, 196629, 17, 0, 196630, 17, 0, 196631, 17, 0, 196632, 1610612751, 0, 196633, 17, 0, 196634, 1610612742, 0, 262146, 6, 0, 262147, 39, 0, 262148, 39, 0, 262149, 39, 0, 262150, 39, 0, 262151, 39, 0, 262152, 39, 0, 262153, 39, 0, 262154, 17, 0, 262155, 39, 0, 262156, 17, 0, 262157, 17, 0, 262158, 17, 0, 262159, 17, 0, 262160, 26, 0, 262161, 26, 0, 262162, 26, 0, 262163, 25, 0, 262164, 17, 0, 262166, 25, 0, 262167, 1610612751, 0, 262168, 1610612751, 0, 262169, 17, 0, 262170, 1610612742, 0, 327682, 6, 0, 327683, 39, 0, 327684, 39, 0, 327685, 39, 0, 327686, 17, 0, 327687, 17, 0, 327688, 17, 0, 327689, -1073741804, 0, 327690, -1073741804, 0, 327691, 17, 0, 327692, 17, 0, 327693, 1610612751, 0, 327694, 17, 0, 327695, 1610612751, 0, 327696, 1610612751, 0, 327697, 21, 0, 327698, 21, 0, 327699, 17, 0, 327700, 17, 0, 327701, 1610612751, 0, 327702, 1610612751, 0, 327703, 1610612751, 0, 327704, 17, 0, 327705, 17, 0, 327706, 1610612742, 0, 393218, 6, 0, 393219, 39, 0, 393220, 17, 0, 393221, 1610612751, 0, 393222, 17, 0, 393223, 1610612751, 0, 393224, 17, 0, 393225, -1073741805, 0, 393226, 1610612751, 0, 393227, -1073741804, 0, 393228, -1073741804, 0, 393229, 1610612751, 0, 393230, 17, 0, 393231, 20, 0, 393232, 20, 0, 393233, 20, 0, 393234, 21, 0, 393235, 21, 0, 393236, 17, 0, 393237, 17, 0, 393238, 1610612751, 0, 393239, 39, 0, 393240, 39, 0, 393241, 17, 0, 393242, 5, 0, 458754, 6, 0, 458755, 39, 0, 458756, 17, 0, 458757, 1610612751, 0, 458758, 1610612751, 0, 458759, 1610612751, 0, 458760, 1610612751, 0, 458761, 1610612751, 0, 458762, 1610612751, 0, 458763, -1073741806, 0, 458764, -1073741803, 0, 458765, 1610612753, 0, 458766, -1073741808, 0, 458767, 28, 0, 458768, 1610612738, 0, 458769, 28, 0, 458770, 20, 0, 458771, 21, 0, 458772, 17, 0, 458773, 17, 0, 458774, 39, 0, 458775, 39, 0, 458776, 39, 0, 458777, 17, 0, 458778, 5, 0, 524290, 6, 0, 524291, 39, 0, 524292, 17, 0, 524293, 17, 0, 524294, 1610612751, 0, 524295, 1610612751, 0, 524296, 1610612776, 0, 524297, 1610612751, 0, 524298, 1610612751, 0, 524299, -1073741806, 0, 524300, -1073741803, 0, 524301, -1073741808, 0, 524302, 1610612764, 0, 524305, 1610612744, 0, 524306, 1610612738, 0, 524307, 21, 0, 524308, 17, 0, 524309, 17, 0, 524310, 39, 0, 524311, 17, 0, 524312, 39, 0, 524313, 39, 0, 524314, 5, 0, 589826, 6, 0, 589827, 14, 0, 589828, 17, 0, 589829, 17, 0, 589830, 1610612751, 0, 589831, 1610612751, 0, 589832, 1610612751, 0, 589833, 1610612751, 0, 589834, 1610612751, 0, 589835, 1610612751, 0, 589836, 17, 0, 589837, 18, 0, 589838, 12, 0, 589839, -1610612729, 0, 589840, 30, 0, 589841, -1073741816, 0, 589842, -1073741812, 0, 589843, 21, 0, 589844, 21, 0, 589845, 17, 0, 589846, 39, 0, 589847, 39, 0, 589848, 39, 0, 589849, 39, 0, 589850, 1610612742, 0, 655362, 6, 0, 655363, 17, 0, 655364, 17, 0, 655365, 17, 0, 655366, 17, 0, 655367, 1610612751, 0, 655368, 1610612751, 0, 655369, 1610612751, 0, 655370, 1610612751, 0, 655371, 1610612751, 0, 655372, 1610612751, 0, 655373, 17, 0, 655374, 21, 0, 655375, -1610612723, 0, 655376, 11, 0, 655377, 13, 0, 655378, 21, 0, 655379, 39, 0, 655380, 39, 0, 655381, 39, 0, 655382, 39, 0, 655383, 39, 0, 655384, 1610612776, 0, 655385, 1610612776, 0, 655386, 3, 0, 720898, 6, 0, 720899, 17, 0, 720900, 17, 0, 720901, 17, 0, 720902, 17, 0, 720903, 17, 0, 720904, 1610612751, 0, 720905, 1610612751, 0, 720906, 1610612751, 0, 720907, 39, 0, 720908, 39, 0, 720909, 17, 0, 720910, 17, 0, 720911, 21, 0, 720912, 21, 0, 720913, 21, 0, 720914, 39, 0, 720915, 39, 0, 720916, 1610612742, 0, 786434, 6, 0, 786435, 17, 0, 786436, 17, 0, 786437, 17, 0, 786438, 17, 0, 786439, 17, 0, 786440, 17, 0, 786441, 39, 0, 786442, 39, 0, 786443, 39, 0, 786444, 39, 0, 786445, 39, 0, 786446, 39, 0, 786447, 39, 0, 786448, 17, 0, 786449, 21, 0, 786450, 39, 0, 786451, 39, 0, 786452, 1610612742, 0, 851970, 6, 0, 851971, 17, 0, 851972, 17, 0, 851973, 17, 0, 851974, 17, 0, 851975, 39, 0, 851976, 39, 0, 851977, 39, 0, 851978, 39, 0, 851979, 39, 0, 851980, 39, 0, 851981, 39, 0, 851982, 39, 0, 851983, 39, 0, 851984, 17, 0, 851985, 39, 0, 851986, 39, 0, 851987, 39, 0, 851988, 1610612742, 0, 917506, 4, 0, 917507, 17, 0, 917508, 17, 0, 917509, 17, 0, 917510, 17, 0, 917511, 17, 0, 917512, 17, 0, 917513, 39, 0, 917514, 39, 0, 917515, 39, 0, 917516, 17, 0, 917517, 39, 0, 917518, 39, 0, 917519, 39, 0, 917520, 39, 0, 917521, 39, 0, 917522, 39, 0, 917523, 39, 0, 917524, 3, 0 )

[node name="TileMap2" type="TileMap" parent="Navigation2D"]
z_index = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 196611, 40, 0, 458767, 1610612749, 0, 458768, 1610612737, 0, 458769, 1610612748, 0, 524302, 1610612749, 0, 524303, 1610612743, 0, 524306, 1610612748, 0, 655380, 9, 0, 655381, 9, 0, 655384, 9, 0, 655385, 9, 0, 917507, 11, 0, 917508, 11, 0, 917509, 11, 0, 917510, 11, 0, 917511, 11, 0, 917512, 11, 0, 917513, 11, 0, 917514, 11, 0, 917515, 11, 0, 917516, 11, 0, 917517, 11, 0, 917518, 11, 0, 917519, 11, 0, 917520, 11, 0, 917521, 11, 0, 917522, 11, 0, 917523, 11, 0 )

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="EnemyPositions"]
position = Vector2( 174, 104 )

[node name="Position2D2" type="Position2D" parent="EnemyPositions"]
position = Vector2( 265, 60 )

[node name="Position2D3" type="Position2D" parent="EnemyPositions"]
position = Vector2( 228, 215 )

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 112, 32 )

[node name="Enterance" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Enterance"]
position = Vector2( 360, 168 )

[node name="Position2D2" type="Position2D" parent="Enterance"]
position = Vector2( 376, 168 )

[node name="PLayerDetector" type="Area2D" parent="."]
position = Vector2( 368, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PLayerDetector"]
shape = SubResource( 1 )

[connection signal="body_entered" from="PLayerDetector" to="." method="_on_PLayerDetector_body_entered"]
